# libViscaCtrl

./: .clang-format  CMakeLists.txt  LICENSE.md  README.md
ClViscaCli/: CMakeLists.txt  main.cpp
QtViscaCli/: CMakeLists.txt
cmake/: AddGTest.cmake  CompilerOptions.cmake
docs/: DEEPSEEK-Prompt.,md
lib/: CMakeLists.txt  Commands.cpp  Commands.h  Export.h  ICommunicator.h  Logger.cpp  Logger.h  RingBuffer.h  SerialCommunicator.h  SerialCommunicator_linux.cpp  SerialCommunicator_windows.cpp  TcpCommunicator.h  TcpCommunicator_linux.cpp  TcpCommunicator_windows.cpp  UdpCommunicator.h  UdpCommunicator_linux.cpp  UdpCommunicator_windows.cpp  UtilsCommon.h  ViscaController.cpp  ViscaController.h
